Fix ApiResponse for getAllStatuses
